<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2016 Jalotsav
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_5jdp"
    android:layout_marginLeft="@dimen/_8jdp"
    android:layout_marginRight="@dimen/_8jdp"
    android:layout_marginTop="@dimen/_5jdp"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="2dp"
    tools:ignore="Missingprefix">

    <RelativeLayout
        android:id="@+id/rltvlyot_recylrvw_pendngsauda_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_10jdp"
        android:paddingTop="@dimen/_10jdp">

        <TextView
            android:id="@+id/tv_recylrvw_pendngsauda_firstchr"
            android:layout_width="@dimen/_40jdp"
            android:layout_height="@dimen/_40jdp"
            android:layout_margin="@dimen/_8jdp"
            android:background="@drawable/round_drwbl"
            android:gravity="center"
            android:padding="@dimen/_5jdp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_18jdp"
            android:visibility="visible"
            tools:text="b" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_recylrvw_pendngsauda_firstchr"
            android:layout_toRightOf="@id/tv_recylrvw_pendngsauda_firstchr"
            android:orientation="vertical">

            <!--Collapse content-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/lnrlyot_pendngsauda_arrow"
                    android:layout_width="@dimen/_30jdp"
                    android:layout_height="@dimen/_30jdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:padding="@dimen/_5jdp">

                    <ImageView
                        android:id="@+id/imgvw_pendngsauda_arrow"
                        android:layout_width="@dimen/_15jdp"
                        android:layout_height="@dimen/_15jdp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:contentDescription="@string/imgcd_image"
                        app:ico_color="@color/grayA8"
                        app:ico_icon="gmd-keyboard-arrow-down"
                        app:ico_size="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_8jdp"
                    android:layout_marginStart="@dimen/_8jdp"
                    android:layout_toLeftOf="@id/lnrlyot_pendngsauda_arrow"
                    android:layout_toStartOf="@id/lnrlyot_pendngsauda_arrow"
                    android:orientation="vertical">

                    <!--Party Name-->
                    <TextView
                        android:id="@+id/tv_recylrvw_pendngsauda_partyname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:text="BARDOLI mk." />

                    <!--Dalal-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5jdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dalal_coln"
                            android:textColor="@color/gray72"
                            android:textSize="@dimen/_12jdp" />

                        <TextView
                            android:id="@+id/tv_recylrvw_pendngsauda_dalal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5jdp"
                            android:layout_marginStart="@dimen/_5jdp"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12jdp"
                            tools:text="JD Patel" />
                    </LinearLayout>
                    <!--END Dalal-->

                    <!--Item-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5jdp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item_coln"
                            android:textColor="@color/gray72"
                            android:textSize="@dimen/_12jdp" />

                        <TextView
                            android:id="@+id/tv_recylrvw_pendngsauda_item"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5jdp"
                            android:layout_marginStart="@dimen/_5jdp"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12jdp"
                            tools:text="MADHUR 5KG" />
                    </LinearLayout>
                    <!--END Item-->

                    <!--Qty & QtyInBori-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5jdp"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <!--Qty-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/qty_coln"
                                android:textColor="@color/gray72"
                                android:textSize="@dimen/_12jdp" />

                            <TextView
                                android:id="@+id/tv_recylrvw_pendngsauda_qty"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/_5jdp"
                                android:layout_marginStart="@dimen/_5jdp"
                                android:gravity="end"
                                android:textAllCaps="true"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_12jdp"
                                tools:text="1" />
                        </LinearLayout>
                        <!--END Qty-->

                        <!--QtyInBori-->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_2jdp"
                            android:layout_marginStart="@dimen/_2jdp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/qtyinbori_coln"
                                android:textColor="@color/gray72"
                                android:textSize="@dimen/_12jdp" />

                            <TextView
                                android:id="@+id/tv_recylrvw_pendngsauda_qtyinbori"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_3jdp"
                                android:layout_marginLeft="@dimen/_5jdp"
                                android:layout_marginRight="@dimen/_3jdp"
                                android:layout_marginStart="@dimen/_5jdp"
                                android:gravity="end"
                                android:textAllCaps="true"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_12jdp"
                                tools:text="0.25" />
                        </LinearLayout>
                        <!--END QtyInBori-->
                    </LinearLayout>
                    <!--END Qty & QtyInBori-->
                </LinearLayout>
            </RelativeLayout>
            <!--END Collapse content-->

            <!--Expand Content-->
            <LinearLayout
                android:id="@+id/lnrlyot_pendngsauda_expandvw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35jdp"
                android:layout_marginLeft="@dimen/_8jdp"
                android:layout_marginRight="@dimen/_35jdp"
                android:layout_marginStart="@dimen/_8jdp"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1jdp"
                    android:layout_marginBottom="@dimen/_5jdp"
                    android:layout_marginTop="@dimen/_5jdp"
                    android:background="@color/grayA8" />

                <!--Rate & MarketRate-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <!--Rate-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rate_coln"
                            android:textColor="@color/gray72"
                            android:textSize="@dimen/_12jdp" />

                        <TextView
                            android:id="@+id/tv_recylrvw_pendngsauda_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_3jdp"
                            android:layout_marginLeft="@dimen/_5jdp"
                            android:layout_marginRight="@dimen/_3jdp"
                            android:layout_marginStart="@dimen/_5jdp"
                            android:gravity="end"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12jdp"
                            tools:text="4175" />
                    </LinearLayout>
                    <!--END Rate-->

                    <!--MarketRate-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_2jdp"
                        android:layout_marginStart="@dimen/_2jdp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mrate_coln"
                            android:textColor="@color/gray72"
                            android:textSize="@dimen/_12jdp" />

                        <TextView
                            android:id="@+id/tv_recylrvw_pendngsauda_mrktrate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5jdp"
                            android:layout_marginStart="@dimen/_5jdp"
                            android:gravity="end"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12jdp"
                            tools:text="4100" />
                    </LinearLayout>
                    <!--END MarketRate-->
                </LinearLayout>
                <!--END Rate & MarketRate-->

                <!--Sauda No-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5jdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saudano_coln"
                        android:textColor="@color/gray72"
                        android:textSize="@dimen/_12jdp" />

                    <TextView
                        android:id="@+id/tv_recylrvw_pendngsauda_saudano"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5jdp"
                        android:layout_marginStart="@dimen/_5jdp"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12jdp"
                        tools:text="S/270716/089" />
                </LinearLayout>
                <!--END Sauda No-->

                <!--Amount-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5jdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_amt_coln"
                        android:textColor="@color/gray72"
                        android:textSize="@dimen/_12jdp" />

                    <TextView
                        android:id="@+id/tv_recylrvw_pendngsauda_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5jdp"
                        android:layout_marginStart="@dimen/_5jdp"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12jdp"
                        tools:text="4175" />
                </LinearLayout>
                <!--END SAmount-->
            </LinearLayout>
            <!--END Expand content-->
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>